[gd_scene load_steps=4 format=3 uid="uid://ddxaph8h8nmji"]

[ext_resource type="Script" uid="uid://dos7m6ocnaf47" path="res://scripts/rewards/battle_rewards.gd" id="1_cx4uy"]
[ext_resource type="Theme" uid="uid://gu54ssij03su" path="res://resources/theme/main_theme.tres" id="1_ophfa"]
[ext_resource type="PackedScene" uid="uid://t44dhyfoti7a" path="res://scenes/ui/select_card_screen.tscn" id="2_ipgjk"]

[node name="BattleRewards" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ophfa")
script = ExtResource("1_cx4uy")

[node name="RewardSelection" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.67451)

[node name="CenterPanel" type="Panel" parent="RewardSelection"]
custom_minimum_size = Vector2(64, 92)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VerticalContainer" type="VBoxContainer" parent="RewardSelection/CenterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacing" type="Control" parent="RewardSelection/CenterPanel/VerticalContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Header" type="Label" parent="RewardSelection/CenterPanel/VerticalContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SELECT REWARDS"

[node name="HSeparator" type="HSeparator" parent="RewardSelection/CenterPanel/VerticalContainer"]
layout_mode = 2

[node name="RewardsContainer" type="VBoxContainer" parent="RewardSelection/CenterPanel/VerticalContainer"]
layout_mode = 2

[node name="SkipRewards" type="Button" parent="RewardSelection/CenterPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -14.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
text = "SKIP"

[node name="SelectCardScreen" parent="." instance=ExtResource("2_ipgjk")]
visible = false
layout_mode = 1

[connection signal="child_exiting_tree" from="RewardSelection/CenterPanel/VerticalContainer/RewardsContainer" to="." method="_on_rewards_container_child_exiting_tree"]
[connection signal="button_up" from="RewardSelection/CenterPanel/SkipRewards" to="." method="_on_skip_rewards_button_up"]
[connection signal="card_selected" from="SelectCardScreen" to="." method="_on_select_card_screen_card_selected"]
